--- a/Page-certifications.html
+++ b/Page-certifications.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="certifications.css" rel="stylesheet">
     <title>Certifications</title>
 </head>
 <body>
@@ -16,6 +16,19 @@
             <h2>Expérience Professionnelle</h2>
         </div>
         <ul class="timeline">
+            <li>
+                <div class="timeline-badge"><span class="bi-briefcase-fill"></span></div>
+                <div class="timeline-panel-container-inverted">
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>Introduction à Jquery</h3>
+                            <img class="image" src="https://raw.githubusercontent.com/Edjerroud/page-certifications/master/images/ligne-de-commande-dans-un-terminal.png" alt="">
+                        </div>
+                        <div class="timeline-body">
+                        </div>
+                    </div>
+                </div>
+            </li>
             <li>
                 <div class="timeline-badge"><span class="bi-briefcase-fill"></span></div>
                 <div class="timeline-panel-container">
