ajout png jquery

--- a/Page-certifications.html
+++ b/Page-certifications.html
@@ -21,8 +21,8 @@
                 <div class="timeline-panel-container-inverted">
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h3>Introduction à Jquery</h3>
-                            <img class="image" src="https://raw.githubusercontent.com/Edjerroud/page-certifications/master/images/ligne-de-commande-dans-un-terminal.png" alt="">
+                            <h3>Introduction à JQuery</h3>
+                            <img class="image" src="https://raw.githubusercontent.com/Edjerroud/page-certifications/master/images/introduction%20a%20jquery.png" alt="">
                         </div>
                         <div class="timeline-body">
                         </div>
